--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   </head>
   <body>
     <h1>Testseite, nichts besonderes.</h1>
+    <p>Hallo hier ist dein Partner. ich würde dir gerne mein viel tolleres Codecademy Profil hierlassen da es bestimmt die 
+      Aufgaben mit den Bonuspunkten hat und du nicht :D
+    </p>
+    <a href="http://www.codecademy.com/siggiw">Das Profil des Partners</a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
